# nbd

./: .cvsignore  .dir-locals.el  .gbs.conf  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  BRANCH  CodingStyle  Doxyfile.in  LICENSE  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  area_of_a_triangle.c  args.c  args.h  autogen.sh  backend-read-write.c  backend-sendfile-freebsd.c  backend-sendfile-linux.c  backend.h  buffer.c  buffer.h  cliserv.c  cliserv.h  config.h.in  configure  configure.ac  configure.in  coverity_model.c  crypto-gnutls.c  crypto-gnutls.h  gmodule-dummy.h  lfs.h  libtool  make-integrityhuge.c  (+42 more)
.gear/: rules
.gear/tags/: list
.github/workflows/: build.yml
.travis/: add-trusty  add-wily  before_install
debian/: changelog  control  copyright  nbd-client-udeb.install  nbd-client.NEWS  nbd-client.README.Debian  nbd-client.cf  nbd-client.config  nbd-client.dirs  nbd-client.init.d  nbd-client.initramfs-hook  nbd-client.initrd  nbd-client.install  nbd-client.links  nbd-client.lintian-overrides  nbd-client.manpages  nbd-client.modprobe  nbd-client.nbdtab  nbd-client.postinst  nbd-client.postrm  nbd-client.templates  nbd-server.NEWS  nbd-server.conf.tmpl  nbd-server.config  nbd-server.dirs  nbd-server.init.d  nbd-server.install  nbd-server.lintian-overrides  nbd-server.manpages  nbd-server.postinst  nbd-server.postrm  nbd-server.preinst  nbd-server.service  nbd-server.templates  not-installed  preinst  prerm  rules  tmp.dirs
debian/po/: POTFILES.in  ca.po  cs.po  da.po  de.po  es.po  fi.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
debian/tests/: control  get-deb-codename.pl  initrd-boot  nbdtab-ipv4-address  read-write
doc/: Doxyfile.in  Makefile.am  README  netlink-proto.md  proto.md  proto.txt  todo.txt  uri.md
docs/: Makefile.am  nbdkit-plugin.pod  nbdkit.pod
gznbd/: .gitignore  Makefile  Makefile.am  gznbd.c
gznbd/.svn/: all-wcprops  dir-wcprops  entries
gznbd/.svn/text-base/: gznbd.c.svn-base
gznbd/.svn/wcprops/: Makefile.svn-work  gznbd.c.svn-work
include/: Makefile.am  nbdkit-plugin.h
man/: Makefile.am  mans.mk  nbd-client.8.in.sgml  nbd-client.8.sgml.in  nbd-server.1.in.sgml  nbd-server.1.sgml.in  nbd-server.5.in.sgml  nbd-server.5.sgml.in  nbd-trdump.1.in.sgml  nbd-trdump.1.sgml.in  nbd-trdump.8.in.sgml  nbd-trplay.1.in.sgml  nbd-trplay.1.sgml.in  nbdtab.5.in.sgml  nbdtab.5.sgml.in  sh.tmpl
packaging/: nbd.manifest  nbd.spec
plugins/: Makefile.am
plugins/curl/: Makefile.am  curl.c  nbdkit-curl-plugin.pod
plugins/example1/: Makefile.am  example1.c  libnbdkit-example1.pod  nbdkit-example1-plugin.pod
plugins/example2/: Makefile.am  example2.c  libnbdkit-example2.pod  nbdkit-example2-plugin.pod
plugins/example3/: Makefile.am  example3.c  libnbdkit-example3.pod  nbdkit-example3-plugin.pod
plugins/file/: Makefile.am  file.c  libnbdkit-file.pod  nbdkit-file-plugin.pod
plugins/guestfs/: Makefile.am  guestfs-plugin.c  nbdkit-guestfs-plugin.pod
plugins/gzip/: Makefile.am  gzip.c  libnbdkit-gzip.pod  nbdkit-gzip-plugin.pod
plugins/libvirt/: Makefile.am  libnbdkit-libvirt-plugin.pod  libvirt-plugin.c  nbdkit-libvirt-plugin.pod
plugins/ocaml/: Makefile.am  NBDKit.ml  NBDKit.mli  nbdkit-ocaml-plugin.pod  ocaml.c
plugins/perl/: Makefile.am  example.pl  nbdkit-perl-plugin.pod  perl.c
plugins/python/: Makefile.am  example.py  nbdkit-python-plugin.pod  python.c
plugins/ruby/: Makefile.am  example.rb  nbdkit-ruby-plugin.pod  ruby.c
plugins/streaming/: Makefile.am  nbdkit-streaming-plugin.pod  streaming.c
plugins/vddk/: Makefile.am  README.VDDK  nbdkit-vddk-plugin.pod  vddk.c
plugins/xz/: Makefile.am  blkcache.c  blkcache.h  nbdkit-xz-plugin.pod  xz.c  xzfile.c  xzfile.h
src/: Makefile.am  cleanup.c  connections.c  errors.c  internal.h  main.c  nbdkit-plugin.h  nbdkit.c  plugins.c  protocol.h  sockets.c  tls.c  utils.c
support/: genver.sh
systemd/: .gitignore  Makefile.am  nbd@.service.sh.in  nbd@.service.tmpl  sh.tmpl
tests/: Makefile.am  README.tests  test-captive.sh  test-connect.c  test-dump-config.sh  test-file.c  test-foreground.sh  test-gzip.c  test-help-plugin.sh  test-help.sh  test-lang-plugins.c  test-newstyle.c  test-ocaml.c  test-oldstyle.c  test-random-sock.sh  test-single.sh  test-start.sh  test-streaming.c  test-xz.c  test.c  test.h  test.pl  test.py  test.rb  test_ocaml_plugin.ml
tests/code/: .gitignore  Makefile.am  append.c  args_test.c  clientacl.c  dup.c  macro.h  mask.c  punchdummy.c  size.c  trim.c
tests/parse/: Makefile.am  empty  ipv4  ipv6  multiopt  noopts  parser.c  singleopt
tests/run/: Makefile.am  cwrap_test  integrity-test.tr  integrityhuge-test.tr  libnl_mock.c  nbd-tester-client.c  simple_test
tests/run/certs/: README.md  ca-cert.pem  ca-key.pem  ca.info  client-cert.pem  client-key.pem  client.info  selfsigned-cert.pem  selfsigned-key.pem  server-cert.pem  server-key.pem  server.info
winnbd/: README  license.txt  nbdsrvr.cpp  nbdsrvr.dsp  nbdsrvr.dsw  readme.txt
winnbd/.svn/: all-wcprops  dir-wcprops  entries
winnbd/.svn/text-base/: license.txt.svn-base  nbdsrvr.dsp.svn-base  nbdsrvr.dsw.svn-base
winnbd/.svn/wcprops/: NBDSvrWin2000.zip.svn-work  README.svn-work  license.txt.svn-work  nbdsrvr.cpp.svn-work  nbdsrvr.dsp.svn-work  nbdsrvr.dsw.svn-work  readme.txt.svn-work
